# tellurion

./: .bumpversion.toml  .gitignore  CHANGELOG.md  GEMINI.md  README.md  __requirements.txt  pyproject.toml  requirements.txt
.tellurion/: operational_modes.yml  rules.yml  sync_manifest.yml
.tellurion/state/: session_history.yml  status.yml  todo.yml
docs/: README.md  agent_fidelity.md
docs/archive/: agent_properties.md  bibliography_agents.md  content_organization_and_tokens.md  creating_agents.md  testing_agent_fidelity.md
docs/design/: README.md  branding-and-identity.md  governance-structure.md  monorepo-to-polyrepo-workflow.md  name-reservation-workflow.md  outline.system-design-considerations.md  prototype.client-agent-orchestrator.md  prototype.gateway.md  prototype.ingestion-pipeline.md  prototype.instance-based-manager.md  prototype.skill-factory.md  system-architecture.md  system-prototype.md  versioning-roadmap.md  workspace-migration-roadmap.md
docs/explanation/: README.md  agent-protocols.md  architecture-evolution.md  base-embedding.md  client-agent-orchestration.md  context-engineering.md  documentation-patterns.md  embed-model.md  ingestion-pipeline.md  knowledge-graphs.md  operational-stack.md  relevant-architecture-patterns.md  repository-strategy.md  source-tree.md  state-management.md
docs/how-to/: README.md  adr-workflows.md  updating-versions.md
docs/planning/: backlog.md
docs/reference/: README.md  contract-and-testing-standards.md  glossary.md  governance-engines.md  roles.md  tools.md
tests/: conftest.py
(+67 files in other folders)
