[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tellurion-workspace"
version = "0.1.0"
description = "The Tellurion Framework: A modular ecosystem of specialized agents and engines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "rich",
    "bump-my-version>=1.3.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
